--- a/Index.html
+++ b/Index.html
@@ -238,10 +238,16 @@
   </section>
 
   <!-- Certified & Trusted Experts Badge Section -->
-  <section class="certified-experts">
-    <h3>Certified & Trusted Experts</h3>
-    <img src="https://i.imgur.com/vn8Xc61.png" alt="Certified & Trusted Experts Badge" />
-  </section>
+<section class="certified-experts">
+  <h3>Certified & Trusted Experts</h3>
+  <img src="https://i.imgur.com/vn8Xc61.png" alt="Certified & Trusted Experts Badge" />
+</section>
+
+<!-- Official Certificate Section -->
+<section class="certified-experts">
+  <h3>Our Official Certificate</h3>
+  <img src="https://i.imgur.com/yourCertificateImage.png" alt="Official Certification Document" />
+</section>
 
   <section class="section">
     <h2>Frequently Asked Questions</h2>
