--- a/Index.html
+++ b/Index.html
@@ -246,7 +246,7 @@
 <!-- Official Certificate Section -->
 <section class="certified-experts">
   <h3>Our Official Certificate</h3>
-  <img src="https://i.imgur.com/yourCertificateImage.png" alt="Official Certification Document" />
+  <img src="https://i.imgur.com/VgfP0Wd.png" alt="Official Certification Document" />
 </section>
 
   <section class="section">
