--- a/Index.html
+++ b/Index.html
@@ -237,15 +237,10 @@
     </div>
   </section>
 
-  <!-- Certified & Trusted Experts Badge Section -->
+  <!-- Certified & Trusted Experts Section with Badge and Certificate -->
 <section class="certified-experts">
   <h3>Certified & Trusted Experts</h3>
-  <img src="https://i.imgur.com/vn8Xc61.png" alt="Certified & Trusted Experts Badge" />
-</section>
-
-<!-- Official Certificate Section -->
-<section class="certified-experts">
-  <h3>Our Official Certificate</h3>
+  <img src="https://i.imgur.com/vn8Xc61.png" alt="Certified & Trusted Experts Badge" style="margin-bottom: 1rem;" />
   <img src="https://i.imgur.com/VgfP0Wd.png" alt="Official Certification Document" />
 </section>
 
