--- a/Index.html
+++ b/Index.html
@@ -240,8 +240,10 @@
   <!-- Certified & Trusted Experts Section with Badge and Certificate -->
 <section class="certified-experts">
   <h3>Certified & Trusted Experts</h3>
-  <img src="https://i.imgur.com/vn8Xc61.png" alt="Certified & Trusted Experts Badge" style="margin-bottom: 1rem;" />
-  <img src="https://i.imgur.com/VgfP0Wd.png" alt="Official Certification Document" />
+  <div style="display: flex; flex-direction: column; align-items: center; gap: 1rem;">
+    <img src="https://i.imgur.com/vn8Xc61.png" alt="Certified & Trusted Experts Badge" />
+    <img src="https://i.imgur.com/VgfP0Wd.png" alt="Official Certification Document" />
+  </div>
 </section>
 
   <section class="section">
