--- a/Index.html
+++ b/Index.html
@@ -241,7 +241,7 @@
 <section class="certified-experts">
   <h3>Certified & Trusted Experts</h3>
   <div style="display: flex; flex-direction: column; align-items: center; gap: 1rem;">
-    <img src="https://i.imgur.com/vn8Xc61.png" alt="Certified & Trusted Experts Badge" />
+    <img src="https://i.imgur.com/4p5mpMc.png" alt="Certified & Trusted Experts Badge" />
     <img src="https://i.imgur.com/VgfP0Wd.png" alt="Official Certification Document" />
   </div>
 </section>
